# bigtalk

./: MANIFEST.in  README.rst  pyproject.toml  setup.py
bigtalk/: brokers.py  command.py  locater.py  message.py  methods.py  objects.py  persist.py  utility.py  workdir.py
examples/: flt.py  log.py  mdl.py  mod.py  pth.py  rst.py  udp.py  upt.py
mods/: atr.py  fnd.py  irc.py  lst.py  man.py  mbx.py  rss.py  sil.py  tdo.py  thr.py  tmr.py  web.py  wsd.py
testing/: test_ainterface.py  test_asdict.py  test_client.py  test_command.py  test_composite.py  test_decoder.py  test_encoder.py  test_handler.py  test_inherit.py  test_object.py  test_persist.py  test_runtime.py  test_storage.py
